--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
@@ -3,6 +3,16 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="450" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="Sub-Setting Wizard" FontSize="11">
+    <Window.Resources>
+        <Storyboard x:Key="sbdRotation">
+            <DoubleAnimation
+            Storyboard.TargetName="popupGeneratingImage"
+            Storyboard.TargetProperty="(Image.RenderTransform).(RotateTransform.Angle)"
+            From="0" To="360" Duration="0:0:3"
+            RepeatBehavior="Forever"/>
+        </Storyboard>
+    </Window.Resources>
+    
     <Canvas Name="canvas">
         <DockPanel Margin="2,5,5,5" Canvas.Bottom="0" Canvas.Left="0" Canvas.Right="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
             <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
@@ -22,11 +32,17 @@
                 <UniformGrid Rows="1" Columns="3">
                     <GroupBox Header="ABIEs" Margin="0,0,0,0">
                         <DockPanel>
-                            <TreeView ItemsSource="{Binding Path=Model.CandidateAbieItems}" Name="treeviewAbies" SelectedItemChanged="treeviewAbies_ItemSelectionChanged">
+                            <TreeView ItemsSource="{Binding Path=Model.CandidateAbieItems}" Name="treeviewAbies" SelectedItemChanged="treeviewAbies_ItemSelectionChanged" TreeViewItem.Expanded="treeviewAbies_Expanded" TreeViewItem.Collapsed="treeviewAbies_Expanded">
+                                <TreeView.ItemContainerStyle>
+                                    <Style TargetType="{x:Type TreeViewItem}">
+                                        <Setter Property="IsExpanded" Value="{Binding Path=IsExpanded}" />
+                                    </Style>
+                                </TreeView.ItemContainerStyle>
+
                                 <TreeView.ItemTemplate>
                                     <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
                                         <StackPanel Orientation="Horizontal">
-                                            <CheckBox IsChecked="{Binding Path=Checked}" Checked="treeviewAbies_ItemCheckBoxChecked" Unchecked="treeviewAbies_ItemCheckBoxChecked"/>
+                                            <CheckBox IsChecked="{Binding Path=Checked}" Visibility="{Binding Path=visibility}" Checked="treeviewAbies_ItemCheckBoxChecked" Unchecked="treeviewAbies_ItemCheckBoxChecked"/>
                                             <TextBlock Text="{Binding Path=Text}"/>
                                         </StackPanel>
                                     </HierarchicalDataTemplate>
@@ -43,7 +59,7 @@
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
                                             <CheckBox IsChecked="{Binding Path=Checked}" Checked="listboxBbies_ItemCheckBoxChecked" Unchecked="listboxBbies_ItemCheckBoxChecked" />
-                                            <TextBox  Text="{Binding Path=Text}" IsReadOnly="True" Focusable="False" Cursor="Arrow" GotMouseCapture="listboxBbies_ItemTextBoxGotMouseCapture" LostFocus="listboxBbies_ItemTextBoxLostFocus" IsEnabled="True" BorderThickness="0" Background="Transparent" />
+                                            <TextBox  Text="{Binding Path=Text}" IsReadOnly="True" Focusable="False" Cursor="Arrow" IsEnabled="True" BorderThickness="0" Background="Transparent" />
                                         </StackPanel>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
@@ -61,7 +77,7 @@
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
                                             <CheckBox IsChecked="{Binding Path=Checked}" Checked="listboxAsbies_ItemCheckBoxChecked" Unchecked="listboxAsbies_ItemCheckBoxChecked"/>
-                                            <TextBox Text="{Binding Path=Text}" IsReadOnly="{Binding Path=ItemReadOnly}" Focusable="{Binding Path=ItemFocusable}" Cursor="{Binding Path=ItemCursor}" GotMouseCapture="listboxAsbies_ItemTextBoxGotMouseCapture" LostFocus="listboxAsbies_ItemTextBoxLostFocus" IsEnabled="True" BorderThickness="0" Background="Transparent" />
+                                            <TextBox Text="{Binding Path=Text}" IsReadOnly="{Binding Path=ItemReadOnly}" Focusable="{Binding Path=ItemFocusable}" Cursor="{Binding Path=ItemCursor}" IsEnabled="True" BorderThickness="0" Background="Transparent" />
                                         </StackPanel>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
@@ -76,14 +92,21 @@
 
             </DockPanel>
         </DockPanel>
-        <Canvas Visibility="Collapsed" Name="innerCanvas" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
-                <Rectangle.Fill>
-                    <SolidColorBrush Color="Gray" Opacity="0.75"/>
-                </Rectangle.Fill>
-            </Rectangle>
-            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-                <TextBlock FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center">Loading ...</TextBlock>
+        <!-- Gray background shield -->
+        <Canvas Name="shield" Background="Black" Opacity="0.6" Width="{Binding ElementName=canvas,Path=ActualWidth}" Height="{Binding ElementName=canvas,Path=ActualHeight}" Visibility="Collapsed" />
+        <!-- Popup field for "generating" progress field -->
+        <Canvas Visibility="Collapsed" Name="popupGenerating" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Border CornerRadius="5,5,5,5" Background="LightGray" Height="70" Width="160">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Name="popupGeneratingImage" Margin="10,0,0,0" Width="45" Height="45" Source="./../../../../Resources/generate.png">
+                            <Image.RenderTransform>
+                                <RotateTransform Angle="0" CenterX="22.5" CenterY="22.5" />
+                            </Image.RenderTransform>
+                        </Image>
+                        <Label Margin="10,22,0,0">Loading...</Label>
+                    </StackPanel>
+                </Border>
             </Grid>
         </Canvas>
     </Canvas>
