--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
@@ -3,6 +3,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="ABIE Editor" FontSize="11">
+    <Window.Resources>
+        <Storyboard x:Key="sbdRotation">
+            <DoubleAnimation
+            Storyboard.TargetName="popupGeneratingImage"
+            Storyboard.TargetProperty="(Image.RenderTransform).(RotateTransform.Angle)"
+            From="0" To="360" Duration="0:0:3"
+            RepeatBehavior="Forever"/>
+        </Storyboard>
+    </Window.Resources>
     <Canvas Name="canvas">
         <DockPanel Margin="2,5,5,5" Canvas.Bottom="0" Canvas.Left="0" Canvas.Right="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
             <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
@@ -151,14 +160,21 @@
                 </TabControl>
             </DockPanel>
         </DockPanel>
-        <Canvas Visibility="Collapsed" Name="innerCanvas" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-            <Rectangle Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=innerCanvas, Path=ActualWidth}" Height="{Binding ElementName=innerCanvas, Path=ActualHeight}">
-                <Rectangle.Fill>
-                    <SolidColorBrush Color="Gray" Opacity="0.75"/>
-                </Rectangle.Fill>
-            </Rectangle>
-            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-            <TextBlock FontSize="50" HorizontalAlignment="Center" VerticalAlignment="Center">Loading ...</TextBlock>
+        <!-- Gray background shield -->
+        <Canvas Name="shield" Background="Black" Opacity="0.6" Width="{Binding ElementName=canvas,Path=ActualWidth}" Height="{Binding ElementName=canvas,Path=ActualHeight}" Visibility="Collapsed" />
+        <!-- Popup field for "generating" progress field -->
+        <Canvas Visibility="Collapsed" Name="popupGenerating" Canvas.Left="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
+            <Grid Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Border CornerRadius="5,5,5,5" Background="LightGray" Height="70" Width="160">
+                    <StackPanel Orientation="Horizontal">
+                        <Image Name="popupGeneratingImage" Margin="10,0,0,0" Width="45" Height="45" Source="./../../../../Resources/generate.png">
+                            <Image.RenderTransform>
+                                <RotateTransform Angle="0" CenterX="22.5" CenterY="22.5" />
+                            </Image.RenderTransform>
+                        </Image>
+                        <Label Margin="10,22,0,0">Loading...</Label>
+                    </StackPanel>
+                </Border>
             </Grid>
         </Canvas>
     </Canvas>
