--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
@@ -73,12 +73,14 @@
                     </GroupBox>
                     <GroupBox Header="ASBIEs" Margin="-2,0,0,0">
                         <DockPanel>
-                            <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="listboxAsbies" Margin="0,0,0,0" SelectionChanged="listboxAsbies_ItemSelectionChanged" Padding="0,1,0,0">
+                            <ListBox ItemsSource="{Binding Path=Model.PotentialAsbieItems}" Name="listboxAsbies" Margin="0,0,0,0" SelectionChanged="listboxAsbies_ItemSelectionChanged" Padding="0,1,0,0">
                                 <ListBox.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel Orientation="Horizontal">
-                                            <CheckBox IsChecked="{Binding Path=Checked}" Checked="listboxAsbies_ItemCheckBoxChecked" Unchecked="listboxAsbies_ItemCheckBoxChecked"/>
-                                            <TextBox Text="{Binding Path=Text}" IsReadOnly="{Binding Path=ItemReadOnly}" Focusable="{Binding Path=ItemFocusable}" Cursor="{Binding Path=ItemCursor}" IsEnabled="True" BorderThickness="0" Background="Transparent" />
+                                            <Image Source="./../../../../Resources/arrow_incoming.png" Visibility="{Binding Path=Inbound}" ToolTip="This is an incoming ASBIE"/>
+                                            <Image Source="./../../../../Resources/arrow_outgoing.png" Visibility="{Binding Path=Outbound}" ToolTip="This is an outgoing ASBIE"/>
+                                            <CheckBox IsChecked="{Binding Path=Checked}" Checked="listboxAsbies_ItemCheckBoxChecked" Unchecked="listboxAsbies_ItemCheckBoxChecked" />
+                                            <TextBox Text="{Binding Path=Text}" BorderThickness="0" Background="Transparent" />
                                         </StackPanel>
                                     </DataTemplate>
                                 </ListBox.ItemTemplate>
