--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/SubSettingWizard.xaml
@@ -2,7 +2,8 @@
     x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.SubSettingWizard"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="450" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="Sub-Setting Wizard" FontSize="11">
+    xmlns:VIENNAAddInWpfUserControls="clr-namespace:VIENNAAddInWpfUserControls;assembly=VIENNAAddInWpfUserControls"
+    Height="484" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="Sub-Setting Wizard" FontSize="11">
     <Window.Resources>
         <Storyboard x:Key="sbdRotation">
             <DoubleAnimation
@@ -15,18 +16,35 @@
     
     <Canvas Name="canvas">
         <DockPanel Margin="2,5,5,5" Canvas.Bottom="0" Canvas.Left="0" Canvas.Right="0" Canvas.Top="0" Width="{Binding ElementName=canvas, Path=ActualWidth}" Height="{Binding ElementName=canvas, Path=ActualHeight}">
-            <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
+            <StackPanel DockPanel.Dock="Top">
+            <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                 <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelDocLibrariess">Choose DOC Library:</Label>
                 <ComboBox ItemsSource="{Binding Path=Model.CandidateDocLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxDocLibraries" SelectionChanged="comboboxDocLibraries_SelectionChanged"></ComboBox>
             </DockPanel>
-            <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
+            <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
                 <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelRootElement">Root Element:</Label>
                 <TextBlock Text="{Binding Path=Model.RootElement}"/>
                 <!--<ComboBox ItemsSource="{Binding Path=Model.CandidateRootElementNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxRootElement" SelectionChanged="comboboxRootElement_SelectionChanged"></ComboBox>-->
             </DockPanel>
-            <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,15,1,1">
+            </StackPanel>
+            <StackPanel Orientation="Vertical" DockPanel.Dock="Bottom">
+                    <CheckBox Name="schematronCheckBox">Generate Schematron Rules?</CheckBox>
+                <StackPanel Orientation="Horizontal">
+                    <Label>Namespace Prefix:</Label>
+                    <TextBox Name="namespacePrefix" IsEnabled="{Binding ElementName=schematronCheckBox, Path=IsChecked}" Width="220" Margin="75,1,1,1"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label>Target Namespace:</Label>
+                    <TextBox Name="targetNamespace" IsEnabled="{Binding ElementName=schematronCheckBox, Path=IsChecked}" Width="220" Margin="70,1,1,1"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal">
+                    <Label>Output directory:</Label>
+                    <VIENNAAddInWpfUserControls:DirectorySelector KeyboardNavigation.TabIndex="3" Name="textboxOutputDirectory" Width="220" Margin="82,1,1,1" IsEnabled="{Binding ElementName=schematronCheckBox, Path=IsChecked}"/>
+                </StackPanel>
+                <StackPanel Orientation="Horizontal"  HorizontalAlignment="Center" VerticalAlignment="Center"  Margin="1,1,1,5">
                 <Button HorizontalAlignment="Center" Width="100" Name="buttonCreateSubSet" Margin="5,5,5,5" Click="buttonCreateSubSet_Click">C_reate Sub-Set</Button>
                 <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click" IsCancel="True">_Close</Button>
+            </StackPanel>
             </StackPanel>
             <DockPanel>
                 <UniformGrid Rows="1" Columns="3">
